--- a/a3_task2_karen_gibson.Rmd
+++ b/a3_task2_karen_gibson.Rmd
@@ -6,7 +6,7 @@ output: html_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE, message = FALSE, warning = FALSE)
+knitr::opts_chunk$set(echo = TRUE, message = FALSE, warning = TRUE)
 library(tidyverse)
 library(lubridate)
 ```
@@ -57,7 +57,11 @@ Make sure to `View()` the resulting data frame (remember: run `View()` in the Co
 
 ```{r}
 # Your code here: 
-
+sw_split_name <- starwars %>% 
+  separate(col = name,
+           into = c("name_1", "name_2", "name_3"),
+           sep = "-"
+  )
 
 ```
 
@@ -91,7 +95,13 @@ Make sure to `View()` the resulting data frame (remember: run `View()` in the Co
 
 ```{r}
 # Your code here:
-
+sw_skin_sep <- starwars %>% 
+  separate(col = skin_color,
+           into = c("skin_1", "skin_2"),
+           sep =  ",",
+           extra ="merge" ,
+           remove = FALSE)
+           
 
 ```
 
@@ -127,7 +137,12 @@ In the code chunk below, starting from the `mpg` data create a new data frame ca
 
 ```{r}
 # Your code here: 
-
+mpg_model_class <- mpg %>% 
+  unite(col = model_class,
+        c(model, class),
+      sep = "-",
+      remove = FALSE
+   )
 
 ```
 
@@ -158,7 +173,9 @@ In the code chunk below, use `ymd()` to convert a date that you choose in `YYYY-
 ```{r}
 # Your code here: 
 
-
+ymd(19771107)
+ymd("1977-11-07")
+ymd("2020/11/07")
 ```
 
 #### 3B. Follow me
@@ -182,6 +199,10 @@ In the code chunk below, create a vector (using `c()`, as above) stored as `some
 
 ```{r}
 # Your code here: 
+
+some_dates <- c(11061972, 02142007,01301843)
+some_dates_converted <- mdy(some_dates)
+some_dates_converted
 
 
 ```
@@ -226,7 +247,15 @@ Starting from the `lakers` dataset, create a new dataset called `gasol_hookshots
 
 ```{r}
 # Your code here: 
+gasol_hookshots <- lakers %>% 
+  filter (type == "hook" & player =="Pau Gasol") %>% 
+  mutate(date_new = ymd(date)) %>% 
+  mutate(month_new = month(date_new)) %>% 
+  count(month_new)
+  
+gasol_hookshots
 
+  
 
 ```
 
